--- a/package.json
+++ b/package.json
@@ -4,8 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ME",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
+    "config": "^3.3.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "get-parameter-names": "^0.3.0",
+    "http-status-codes": "^1.4.0",
+    "joi": "^17.1.1",
+    "kafka-node": "^5.0.0",
+    "lodash": "^4.17.19",
+    "winston": "^3.3.3"
+  }
 }
