--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "ME",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.8.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
